--- a/PhotoDNI/app/src/main/res/layout/activity_main.xml
+++ b/PhotoDNI/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="es.usal.aythae.photodni.MainActivity">
+    tools:context="es.usal.aythae.photodni.MainActivity"
+    android:id="@+id/coordinator_layout">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
