--- a/app/src/main/res/layout/uploading_dialog.xml
+++ b/app/src/main/res/layout/uploading_dialog.xml
@@ -1,28 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-
-
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="es.usal.tfg.demos.MainActivity"
-    tools:showIn="@layout/activity_main"
-
     >
-    <TextView
-        android:id="@+id/instructions"
-        android:text="@string/instructions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <!-- Circular style="?android:attr/progressBarStyleLarge"-->
+    <ProgressBar
 
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/uploadProgressBarLarge"
+        android:visibility="visible"
+        android:indeterminate="true"/>
 
 
 
