--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="es.usal.tfg.demos.MainActivity"
-    tools:showIn="@layout/activity_main"
+    tools:showIn="@layout/app_bar_main"
 
     >
     <TextView
