Añadido drawer menu para cambiar entre actividades y mostrar el nombre de la peticion logeada, falta acabar de escribir las instruccines

--- a/app/src/main/res/layout/app_bar_instructions.xml
+++ b/app/src/main/res/layout/app_bar_instructions.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="es.usal.tfg.demos.MainActivity"
-    android:id="@+id/coordinator_layout">
+    tools:context="es.usal.tfg.demos.InstructionsActivity">
 
+    <!-- Explicacion LinearLayout: http://stackoverflow.com/questions/33608564/coordinatorlayout-messing-up-seterror-popup-position-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,7 +19,7 @@
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_main"
+                android:id="@+id/toolbar_instructions"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
@@ -28,14 +27,11 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_main" />
+
+
+
+        <include layout="@layout/content_instructions" />
     </LinearLayout>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_menu_add" />
+
 
 </android.support.design.widget.CoordinatorLayout>
